# server

./: CMakeLists.txt  ClientVisualizePluginInterface.hpp  MWSwitchModule.cpp  MWSwitchModule.h  Operatory_vzaimodejstviya_s_priborami.cpp  README.md  afar_server_application.cpp  afar_server_application.h  afar_server_client_visualize_plugin.cpp  afar_server_client_visualize_plugin.h  afar_server_directives.xml  afar_server_plugin.cpp  afar_server_plugin.h  afar_server_rpc.cpp  afar_server_rpc.h  afar_server_socket_rpc.cpp  afar_server_socket_rpc.h  main.cpp
